2011-03-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterx.h, src/filterx.cpp
	  (GetSuffix, GetPrefix, suffixStr, prefixStr):
	* src/filterrtf.cpp (FilterRTF::FilterRTF):
	* src/filterhtml.cpp (FilterHtml::FilterHtml):
	* src/filterlatex.cpp (FilterLatex::FilterLatex):
	  - Remove unused members & methods.

	* src/filterx.h (wordBreakStr)
	* src/filterrtf.cpp (FilterRTF::FilterRTF):
	* src/filterhtml.cpp (FilterHtml::FilterHtml):
	* src/filterlatex.cpp (FilterLatex::FilterLatex):
	* src/filterlambda.cpp (FilterLatex::FilterLatex):
	  - Make 'wordBreakStr' member (const char *) to string literal.

2011-03-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::AbsWordSeg):
	Use macro D2TRIE for trie file name instead of hard literal.

2011-03-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.h, src/abswordseg.cpp
	  (AbsWordSeg, AbsWordSeg::AbsWordSeg, AbsWordSeg::InitData):
	  - Remove unused 'cntSep' member.

2011-03-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Move dict initialization to AbsWordSeg base class.

	* src/abswordseg.h (MyDict, InitData):
	  - Make the members private.
	* src/abswordseg.h, src/abswordseg.cpp
	  (AbsWordSeg::AbsWordSeg, +Construct, AbsWordSeg::~AbsWordSeg):
	* src/longwordseg.cpp (LongWordSeg::LongWordSeg):
	* src/maxwordseg.cpp (MaxWordSeg::MaxWordSeg):
	  - Move MyDict c-tor & d-tor code from derived class to base class.
	  - Add base class c-tor which accepts dataPath arg, and split common
	    c-tor code into AbsWordSeg::Construct().
	* src/longwordseg.h, src/longwordseg.cpp (-LongWordSeg::~LongWordSeg):
	  - Remove the now-empty d-tor.

2011-03-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordseg.cpp (Usage): Print usage on stderr, not stdout.

2011-03-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordseg.cpp (main): Make 'wsegpath', 'method', 'fileformat',
	'unicode' (const char *).
